k8s/aks/loopool-aks-query-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: loopool-query-svc
  namespace: loopool
  labels:
    app: loopool-query
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 30017
  selector:
    app: loopool-query
