k8s/aks/nginx-test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-svc
  namespace: loopool
  labels:
    app: nginx-test-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: nginx-test
